# Themis

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  audit.py  deny.toml  project.yml.example  requirements.txt
.github/workflows/: ci.yml
ansible/: day2-push-config.yml  deploy.yml  teardown.yml
ansible/roles/chaos/tasks/: latency.yml  link-down.yml  link-flap.yml  link-up.yml  node-kill.yml  packet-loss.yml  rack-partition.yml
ansible/roles/control-plane/tasks/: artifacts.yml  bastion.yml  main.yml  obs.yml  ops.yml  orchestrator.yml  registry.yml  services.yml  telemetry.yml
ansible/roles/control-plane/templates/: dnsmasq.conf.j2  loki-config.yml.j2  prometheus.yml.j2
ansible/roles/l1-fabric/tasks/: create.yml  destroy.yml
ansible/roles/l1-fabric/templates/: bridge-setup.sh.j2
ansible/roles/nos-dispatch/tasks/: main.yml
ansible/roles/nos-dispatch/tasks/frr/: evpn.yml  push.yml  verify.yml
ansible/roles/nos-dispatch/tasks/nvue/: evpn.yml  push.yml  verify.yml
ansible/roles/observability/tasks/: frr-exporter.yml  main.yml  node-exporter.yml
ansible/roles/vm-bootstrap/defaults/: main.yml
ansible/roles/vm-bootstrap/tasks/: build-seed.yml  destroy.yml  main.yml
ansible/roles/vm-provision/tasks/: create-single-vm.yml  create-vm.yml  destroy-single-vm.yml  destroy-vm.yml  prepare-base-image.yml
ansible/roles/vm-provision/templates/: domain.xml.j2
cli/: main.py
crates/themis/: Cargo.toml
crates/themis-compiler/: Cargo.toml
crates/themis-compiler/src/: estimator.rs  expander.rs  inventory.rs  lib.rs  loader.rs  renderer.rs  services_config.rs
crates/themis-core/: Cargo.toml
crates/themis-core/src/: conversions.rs  error.rs  lib.rs  platform.rs  role.rs  template.rs  topology.rs
crates/themis-platforms/: Cargo.toml
crates/themis-platforms/src/: cumulus_vx.rs  frr_fedora.rs  lib.rs
crates/themis-proto/: Cargo.toml
crates/themis-proto/proto/: themis.proto
crates/themis-proto/src/: lib.rs
crates/themis-runtime/: Cargo.toml
crates/themis-runtime/src/: fabric.rs  host.rs  iso.rs  keys.rs  lib.rs  libvirt.rs  ssh.rs
crates/themis-templates/: Cargo.toml
crates/themis-templates/src/: clos_3tier.rs  hub_spoke.rs  lib.rs  three_tier.rs
crates/themis-tui/: Cargo.toml
crates/themis-tui/src/: main.rs
crates/themis/src/: cli.rs  client.rs  main.rs  output.rs
crates/themis/src/commands/: chaos.rs  completions.rs  define.rs  deploy.rs  destroy.rs  diagram.rs  estimate.rs  health.rs  init.rs  inspect.rs  list.rs  logs.rs  mod.rs  pause.rs  plan.rs  push_config.rs  shutdown.rs  validate.rs  version.rs
crates/themisd/: Cargo.toml
crates/themisd/src/: daemon_deps.rs  deploy.rs  destroy.rs  events.rs  lifecycle.rs  main.rs  paths.rs  reconcile.rs  state.rs
crates/themisd/src/service/: daemon.rs  lab.rs  mod.rs  runtime.rs  stream.rs
docs/: ARCHITECTURE.md  VISION.md  WORK_PLAN.md
generator/: bootstrap.py  estimator.py  expander.py  inventory.py  loader.py  main.py  renderer.py
golden-bootstrap/: Vagrantfile  bake.sh
golden-bootstrap/recipes/cumulus-vx/: provision.sh
templates/clos-3tier/: expander.py  template.yml
templates/clos-5stage/: expander.py  template.yml
templates/hub-spoke/: expander.py  template.yml
