[package]
name = "themis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared domain types, traits, and errors for Themis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
themis-proto = { workspace = true }
tonic = { workspace = true }
