[package]
name = "themis-platforms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in NOS platforms: frr-fedora, cumulus-vx"

[dependencies]
themis-core = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
