[package]
name = "themis-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protobuf definitions and generated gRPC bindings for Themis"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
